force-app/main/default/objects/ServiceResource/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Service Resources CostCenter</relationshipLabel>
    <relationshipName>Service_Resources_CostCenter</relationshipName>
    <type>Lookup</type>
</CustomField>