force-app/main/default/objects/ServiceResource/fields/Diab_Offset__c.field-meta.xml
<CustomField>
    <fullName>Diab_Offset__c</fullName>
    <formula>- VALUE( LEFT(RIGHT( Time_Zone__c, 6),3))</formula>
    <label>Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>