force-app/main/default/objects/ServiceResource/fields/Employee_Group__c.field-meta.xml
<CustomField>
    <fullName>Employee_Group__c</fullName>
    <label>Employee Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>