force-app/main/default/objects/ServiceResource/fields/LastWorkDate__c.field-meta.xml
<CustomField>
    <fullName>LastWorkDate__c</fullName>
    <description>The employee&apos;s Last Work date</description>
    <label>LastWorkDate</label>
    <type>Date</type>
</CustomField>