force-app/main/default/objects/ServiceResource/fields/MonthlySchedule__c.field-meta.xml
<CustomField>
    <fullName>MonthlySchedule__c</fullName>
    <formula>DAY(TODAY())=1</formula>
    <label>MonthlySchedule</label>
    <type>Checkbox</type>
</CustomField>