force-app/main/default/objects/ServiceResource/fields/NPL_Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>NPL_Personnel_Number__c</fullName>
    <externalId>true</externalId>
    <label>Personnel Number</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>