force-app/main/default/objects/ServiceResource/fields/NPL_Time_Entry_Preference__c.field-meta.xml
<CustomField>
    <fullName>NPL_Time_Entry_Preference__c</fullName>
    <description>Used to identify which view the time entry component should default to</description>
    <label>Time Entry Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee View</fullName>
            </value>
            <value>
                <fullName>Job View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>