force-app/main/default/objects/ServiceResource/fields/NPLMA_Class__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>