force-app/main/default/objects/ServiceResource/fields/NPLMA_Craft__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_Craft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Craft</label>
    <referenceTo>Craft__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>