force-app/main/default/objects/ServiceResource/fields/NPLMA_Rate__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_Rate__c</fullName>
    <description>To store the default Rate of the employee&apos;s.</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>