force-app/main/default/objects/ServiceResource/fields/NPLMA_Union__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_Union__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Union</label>
    <referenceTo>Union__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>