force-app/main/default/objects/ServiceResource/fields/Phase_Required__c.field-meta.xml
<CustomField>
    <fullName>Phase_Required__c</fullName>
    <description>30991 Crews, like &quot;floaters,&quot; who will not ever be assigned a Phase or WBS for any projects can be assigned to a Service Appointment/Work Order so that they can start and even complete work before the Work Order Primary Resource (Phase) has been assigned.</description>
    <inlineHelpText>Field is required for Type Crew in order for Dispatching flow to properly identify if the crew requires a Phase to be assigned to SA</inlineHelpText>
    <label>Phase Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>