force-app/main/default/objects/ServiceResource/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Service Resources ProfitCenter</relationshipLabel>
    <relationshipName>Service_Resources_ProfitCenter</relationshipName>
    <type>Lookup</type>
</CustomField>