force-app/main/default/objects/ServiceResource/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>28650: Updated Related List Label
26161: Mobile Notifications query SRs by Personel Area (45382)</description>
    <inlineHelpText>Field should be blank for Laborers and should ALWAYS have a value for Crew Leaders</inlineHelpText>
    <label>Personnel Area</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Personnel Area is set to be a Top Level territory only</errorMessage>
        <filterItems>
            <field>ServiceTerritory.FSL__TerritoryLevel__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Resources in Personnel Area</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>