force-app/main/default/objects/ServiceResource/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>CASE(TEXT($User.TimeZoneSidKey),
&quot;America/Los_Angeles&quot;, &quot;GMT-08:00&quot;,
&quot;America/Santa_Isabel&quot;, &quot;GMT-08:00&quot;,
&quot;America/Tijuana&quot;, &quot;GMT-08:00&quot;,
&quot;America/Vancouver&quot;, &quot;GMT-08:00&quot;,
&quot;Pacific/Pitcairn&quot;, &quot;GMT-08:00&quot;,
&quot;America/Boise&quot;, &quot;GMT-07:00&quot;,
&quot;America/Cambridge_Bay&quot;, &quot;GMT-07:00&quot;,
&quot;America/Chihuahua&quot;, &quot;GMT-07:00&quot;,
&quot;America/Creston&quot;, &quot;GMT-07:00&quot;,
&quot;America/Dawson&quot;, &quot;GMT-07:00&quot;,
&quot;America/Dawson_Creek&quot;, &quot;GMT-07:00&quot;,
&quot;America/Denver&quot;, &quot;GMT-07:00&quot;,
&quot;America/Edmonton&quot;, &quot;GMT-07:00&quot;,
&quot;America/Fort_Nelson&quot;, &quot;GMT-07:00&quot;,
&quot;America/Hermosillo&quot;, &quot;GMT-07:00&quot;,
&quot;America/Inuvik&quot;, &quot;GMT-07:00&quot;,
&quot;America/Mazatlan&quot;, &quot;GMT-07:00&quot;,
&quot;America/Ojinaga&quot;, &quot;GMT-07:00&quot;,
&quot;America/Phoenix&quot;, &quot;GMT-07:00&quot;,
&quot;America/Whitehorse&quot;, &quot;GMT-07:00&quot;,
&quot;America/Yellowknife&quot;, &quot;GMT-07:00&quot;,
&quot;America/Bahia_Banderas&quot;, &quot;GMT-06:00&quot;,
&quot;America/Belize&quot;, &quot;GMT-06:00&quot;,
&quot;America/Chicago&quot;, &quot;GMT-06:00&quot;,
&quot;America/Costa_Rica&quot;, &quot;GMT-06:00&quot;,
&quot;America/El_Salvador&quot;, &quot;GMT-06:00&quot;,
&quot;America/Guatemala&quot;, &quot;GMT-06:00&quot;,
&quot;America/Indiana/Knox&quot;, &quot;GMT-06:00&quot;,
&quot;America/Indiana/Tell_City&quot;, &quot;GMT-06:00&quot;,
&quot;America/Managua&quot;, &quot;GMT-06:00&quot;,
&quot;America/Matamoros&quot;, &quot;GMT-06:00&quot;,
&quot;America/Menominee&quot;, &quot;GMT-06:00&quot;,
&quot;America/Merida&quot;, &quot;GMT-06:00&quot;,
&quot;America/Mexico_City&quot;, &quot;GMT-06:00&quot;,
&quot;America/Monterrey&quot;, &quot;GMT-06:00&quot;,
&quot;America/North_Dakota/Beulah&quot;, &quot;GMT-06:00&quot;,
&quot;America/North_Dakota/Center&quot;, &quot;GMT-06:00&quot;,
&quot;America/North_Dakota/New_Salem&quot;, &quot;GMT-06:00&quot;,
&quot;America/Rainy_River&quot;, &quot;GMT-06:00&quot;,
&quot;America/Rankin_Inlet&quot;, &quot;GMT-06:00&quot;,
&quot;America/Regina&quot;, &quot;GMT-06:00&quot;,
&quot;America/Resolute&quot;, &quot;GMT-06:00&quot;,
&quot;America/Swift_Current&quot;, &quot;GMT-06:00&quot;,
&quot;America/Tegucigalpa&quot;, &quot;GMT-06:00&quot;,
&quot;America/Winnipeg&quot;, &quot;GMT-06:00&quot;,
&quot;Pacific/Galapagos&quot;, &quot;GMT-06:00&quot;,
&quot;America/Bogota&quot;, &quot;GMT-05:00&quot;,
&quot;America/Cancun&quot;, &quot;GMT-05:00&quot;,
&quot;America/Cayman&quot;, &quot;GMT-05:00&quot;,
&quot;America/Coral_Harbour&quot;, &quot;GMT-05:00&quot;,
&quot;America/Detroit&quot;, &quot;GMT-05:00&quot;,
&quot;America/Eirunepe&quot;, &quot;GMT-05:00&quot;,
&quot;America/Grand_Turk&quot;, &quot;GMT-05:00&quot;,
&quot;America/Guayaquil&quot;, &quot;GMT-05:00&quot;,
&quot;America/Havana&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Indianapolis&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Marengo&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Petersburg&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Vevay&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Vincennes&quot;, &quot;GMT-05:00&quot;,
&quot;America/Indiana/Winamac&quot;, &quot;GMT-05:00&quot;,
&quot;America/Iqaluit&quot;, &quot;GMT-05:00&quot;,
&quot;America/Jamaica&quot;, &quot;GMT-05:00&quot;,
&quot;America/Kentucky/Monticello&quot;, &quot;GMT-05:00&quot;,
&quot;America/Lima&quot;, &quot;GMT-05:00&quot;,
&quot;America/Louisville&quot;, &quot;GMT-05:00&quot;,
&quot;America/Montreal&quot;, &quot;GMT-05:00&quot;,
&quot;America/Nassau&quot;, &quot;GMT-05:00&quot;,
&quot;America/New_York&quot;, &quot;GMT-05:00&quot;,
&quot;America/Nipigon&quot;, &quot;GMT-05:00&quot;,
&quot;America/Panama&quot;, &quot;GMT-05:00&quot;,
&quot;America/Pangnirtung&quot;, &quot;GMT-05:00&quot;,
&quot;America/Port-au-Prince&quot;, &quot;GMT-05:00&quot;,
&quot;America/Rio_Branco&quot;, &quot;GMT-05:00&quot;,
&quot;America/Thunder_Bay&quot;, &quot;GMT-05:00&quot;,
&quot;America/Toronto&quot;, &quot;GMT-05:00&quot;,
&quot;Pacific/Easter&quot;, &quot;GMT-05:00&quot;,
&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>