force-app/main/default/objects/ServiceResource/fields/USGAS_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>USGAS_Area_Code__c</fullName>
    <description>This field populate the area code for the service resource.</description>
    <formula>Service_Territory__r.Areacode__c</formula>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>