force-app/main/default/objects/ServiceResource/fields/USGas_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>USGas_CompanyCode__c</fullName>
    <label>CompanyCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>