force-app/main/default/objects/ServiceResource/fields/USGas_CompanyCode_Name__c.field-meta.xml
<CustomField>
    <fullName>USGas_CompanyCode_Name__c</fullName>
    <label>CompanyCode Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>