force-app/main/default/objects/ServiceResource/fields/USGas_Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>USGas_Employee_Role__c</fullName>
    <label>Employee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Employee</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Foreman</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Approver</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Adjuster</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>