force-app/main/default/objects/ServiceResource/fields/USGas_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>USGas_Employment_Status__c</fullName>
    <description>Employment Status of Employee</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>