force-app/main/default/objects/ServiceResource/fields/USGas_Hourly_Salaried__c.field-meta.xml
<CustomField>
    <fullName>USGas_Hourly_Salaried__c</fullName>
    <label>Hourly/Salaried</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>