force-app/main/default/objects/ServiceResource/fields/USGas_Hourly_Salaried_Code__c.field-meta.xml
<CustomField>
    <fullName>USGas_Hourly_Salaried_Code__c</fullName>
    <label>Hourly/Salaried Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>