force-app/main/default/objects/ServiceResource/fields/USGas_IsCrafted__c.field-meta.xml
<CustomField>
    <fullName>USGas_IsCrafted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCrafted</label>
    <type>Checkbox</type>
</CustomField>