force-app/main/default/objects/ServiceResource/fields/USGas_IsUnion__c.field-meta.xml
<CustomField>
    <fullName>USGas_IsUnion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnion</label>
    <type>Checkbox</type>
</CustomField>