force-app/main/default/objects/ServiceResource/fields/USGas_Last4SSN__c.field-meta.xml
<CustomField>
    <fullName>USGas_Last4SSN__c</fullName>
    <label>Last4SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>