force-app/main/default/objects/ServiceResource/fields/USGas_Personnel_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>USGas_Personnel_Sub_Area__c</fullName>
    <label>Personnel Sub Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>