force-app/main/default/objects/ServiceResource/fields/USGas_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>USGas_Profit_Center__c</fullName>
    <description>This will set the profit center id with 18 characters</description>
    <formula>CASESAFEID(Cost_Center__r.Profit_Center__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 characters</inlineHelpText>
    <label>Profit Center</label>
    <type>Text</type>
</CustomField>