force-app/main/default/objects/ServiceResource/fields/USGas_Rig_Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>USGas_Rig_Rent_Rate__c</fullName>
    <description>This rate field stores the rate of the Employee&apos;s Rig-rent and this will be exposed to desktop users to adjust and approve.</description>
    <label>Rig Rent Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>