force-app/main/default/objects/ServiceResource/fields/USGas_TermDate__c.field-meta.xml
<CustomField>
    <fullName>USGas_TermDate__c</fullName>
    <description>The employee&apos;s Termination date</description>
    <label>TermDate</label>
    <type>Date</type>
</CustomField>