force-app/main/default/objects/ServiceResource/fields/USGas_Work_State__c.field-meta.xml
<CustomField>
    <fullName>USGas_Work_State__c</fullName>
    <label>Work State</label>
    <length>4</length>
    <type>Text</type>
</CustomField>