force-app/main/default/objects/ServiceResource/fields/Yearly_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Schedule__c</fullName>
    <formula>AND(
DAY(TODAY()) = 1,
MONTH(TODAY()) = 1
)</formula>
    <label>Yearly Schedule</label>
    <type>Checkbox</type>
</CustomField>