force-app/main/default/objects/ServiceResource/validationRules/ISBLANK_Personnel_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_Personnel_Number</fullName>
    <active>true</active>
    <description>45744 field is required for the Assigned Crew record creation and various other automations</description>
    <errorConditionFormula>AND(
 IsActive ,
ISBLANK(  NPL_Personnel_Number__c  ),
TEXT( ResourceType )=&apos;T&apos;)</errorConditionFormula>
    <errorMessage>Service Resource Personnel Number is required for all Technicians.</errorMessage>
</ValidationRule>