force-app/main/default/objects/ServiceResource/validationRules/ISBLANK_Phase_Required_for_Dispatch.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_Phase_Required_for_Dispatch</fullName>
    <active>true</active>
    <description>30991 Field is required in order for Dispatching flow to properly identify if the crew required a Phase</description>
    <errorConditionFormula>AND(
TEXT( Phase_Required__c )=&apos;&apos;,
TEXT( ResourceType )=&apos;Crew&apos;)</errorConditionFormula>
    <errorMessage>Service Resource Phase Required Field is required for Type Crew in order for Dispatching flow to properly identify if the crew required a Phase</errorMessage>
</ValidationRule>