force-app/main/default/objects/ServiceResource/listViews/Active_Service_Resources_Technicians.listView-meta.xml
<ListView>
    <fullName>Active_Service_Resources_Technicians</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>NPL_Personnel_Number__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>USGAS_Area_Code__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Service Resources (Technicians)</label>
</ListView>