force-app/main/default/objects/ServiceResource/listViews/All_Service_Resources_Crews.listView-meta.xml
<ListView>
    <fullName>All_Service_Resources_Crews</fullName>
    <columns>Name</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>ServiceCrew</columns>
    <columns>Phase_Required__c</columns>
    <columns>Description</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>C</value>
    </filters>
    <label>All Service Resources (Crews)</label>
</ListView>